@@ -43,7 +43,9 @@
 threads used in the benchmark results output.
 (BenchmarkImageCommand): New benchmark option -stepthreads to
 execute the specified command with an increasing number of threads
-to measure how an algorithm benefits from threading.</li>
+to measure how an algorithm benefits from threading.
+(BenchmarkImageCommand): Fix benchmark argument parsing so it is
+not order dependent.</li>
 <li>config/delegates.mgk.in: File names in gnuplot files need to be
 surrounded by double quotes or gnuplot parser will reject them.</li>
 </ul>
